# Robocup

./: README.md
audio_module_dragon/: DragonSpeech.py  Grammar.py  IPSettingGUI.py  SRWindow.py  SpeechSample.py  ip_add.txt  sample.txt
audio_module_dragon/add_words/: AddWords.py  temp_AddWords.py  words.txt
audio_module_grammar_recognition/: CMakeLists.txt  package.xml
audio_module_grammar_recognition/launch/: audio_module_grammar_recognition.launch
audio_module_grammar_recognition/src/: Grammar.py  GrammarBasedLU.py  testgram.txt
audio_module_grammar_recognition/srv/: SetGrammar.srv
base_module_cartesian_path/: CMakeLists.txt  package.xml
base_module_cartesian_path/action/: BaseCartesianPath.action
base_module_cartesian_path/msg/: ObjectSearch.action~
base_module_cartesian_path/src/: base_catesian_path.py
base_module_follow_human/: CMakeLists.txt  README.md  package.xml
base_module_follow_human/action/: FollowHuman.action
base_module_follow_human/src/: follow_human_node.py
base_module_follow_human/src/yaml/: follow_human_param.yaml  leg_detector_param.yaml
base_module_state_checker/: CMakeLists.txt  package.xml
base_module_state_checker/msg/: HsrStateCheck.msg
base_module_state_checker/scripts/: hsrb_state_checker_node.py
base_module_state_checker/srv/: FloatBool.srv  HsrOdom.srv  ObstacleInfo.srv
body_module_head_tracker/: CMakeLists.txt  package.xml
body_module_head_tracker/action/: BodyHeadTrack.action
body_module_wrist_wrench_manager/: CMakeLists.txt  package.xml
tf_util/: tf_utils_non_server.py
(+14 files in other folders)
